--- a/my-react-portfolio/package.json
+++ b/my-react-portfolio/package.json
@@ -2,6 +2,7 @@
   "name": "my-react-portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://altheahanson.github.io/MyReactPortfolio",
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
